src/PresentationalComponents/Email/email.scss
// js generates class '.page__{rootClass}' that wraps the content in your page added to the root tag
// Found in Routes.js as the rootClass
@import '~@redhat-cloud-services/frontend-components-utilities/files/Utilities/_mixins.scss';

.pref-email {
    .pref-email__subs-info {
        padding-bottom: 0;
    }

    .pf-c-data-list {
        border: 0;
    
        .pref-c-title {
            // min and max width, because data lists
            min-width: 155px;
            max-width: 155px;
        }
        .pf-c-data-list__item:last-of-type { border: 0; }

        .pf-c-data-list__item-content {
            .pf-c-data-list__cell{
                > * {
                    padding-bottom: var(--pf-global--spacer--md);

                    &:last-child {
                        padding-bottom: 0;
                    }
                }
            }
        }

        .pf-c-data-list__item-row { padding-left: 0; }
        .pref-email__info-user-email {
            padding-left: 19px;

            a {
                padding-left: var(--pf-global--gutter);
            }
        }
    }

    .pref-email_subheader {
        margin-top: 8px;
        font-size: var(--pf-global--FontSize--md);
        font-weight: var(--pf-global--FontWeight--normal);
    }

    .pref-u-bold { font-weight: var(--pf-global--FontWeight--bold); }

    div.pref-u-condensed {
        padding-top: var(--pf-global--spacer--sm);
        padding-bottom: 0px;
    }

    .pref-email__form-button {
        margin-right: 16px;
    }

    .pref-email__info-head {
        display: block;
        padding-bottom: 0px;
    }
}

@media screen and (max-width: 768px) {
    .pref-email {

        .pf-c-data-list .pref-email__info-user-email {
            padding-left: 0;


            &.pf-c-data-list__cell span {
                padding-bottom: var(--pf-global--spacer--sm);
            }

            > * {
                display: block;
            }


            a {
                padding-left: 0;
            }
        }

        .pref-email__info {
            .pf-c-card__body .pf-l-flex {
                > div:first-of-type {
                    flex-grow: 0;
                    flex-basis: 100%;
                }

                .pref-email_loader span { margin-left: 0; }
            }
        }

        .pf-c-data-list__item:last-of-type {
            .pf-c-data-list__cell:last-of-type {
                padding-top: var(--pf-global--spacer--lg);
            }
        }
        
        ul.pf-c-data-list {
            .pf-c-data-list__item {
                div.pf-c-data-list__cell.pref-u-condensed {
                    padding-top: 0px;
                    padding-bottom: 0px;
                }
            }
        }
    }
}

